@@ -2272,6 +2272,7 @@ GEN     ideallist(GEN nf,long bound);
 GEN     ideallist0(GEN nf,long bound, long flag);
 GEN     ideallistarch(GEN nf, GEN list, GEN arch);
 GEN     ideallog(GEN nf,GEN x,GEN bid);
+GEN     ideallogmod(GEN nf,GEN x,GEN bid, GEN mod);
 GEN     ideallog_units(GEN bnf, GEN bid);
 GEN     idealprincipalunits(GEN nf, GEN pr, long e);
 GEN     idealstar0(GEN nf, GEN x,long flag);
@@ -2773,6 +2774,7 @@ GEN     bnrinit0(GEN bignf,GEN ideal,long flag);
 long    bnrisconductor0(GEN A, GEN B, GEN C);
 long    bnrisconductor(GEN bnr, GEN H);
 long    bnrisgalois(GEN bnr, GEN M, GEN H);
+GEN     bnrisprincipalmod(GEN bnf, GEN x, GEN mod, long flag);
 GEN     bnrisprincipal(GEN bnf, GEN x,long flag);
 GEN     bnrsurjection(GEN bnr1, GEN bnr2);
 GEN     bnfnarrow(GEN bignf);
