@@ -1046,7 +1046,7 @@ Vecsmall([1, 0])
 0
 1
 [1, [2, [2, 0]~, 1, 2, 1]]
-x^2 + Mod(3/2*y + 13/2, y^2 - 5)
+x^2 + Mod(-y + 13, y^2 - 5)
 
 [1 0 0 -1]
 
@@ -2420,4 +2420,4 @@ x^2 + Mod(-17, y)
   ***   at top-level: al2=algtensor(al,al)
   ***                     ^----------------
   *** algtensor: sorry, tensor of non-cyclic algebras is not yet implemented.
-Total time spent: 1303
+Total time spent: 1452
