@@ -85,4 +85,9 @@
 [72, [12, 6], [[425, 259; 0, 1], [70, 2; 0, 2]]]
 [[0]~, 1]
 3
-Total time spent: 53
+
+[2 0]
+
+[0 1]
+
+Total time spent: 32
