@@ -46,14 +46,14 @@ y - 2380)*x^7 + (999*y - 252)*x^6 + (1362*y + 8492)*x^5 + (-577*y + 25411)*x
 16
 1
 17
-[x^16 + 6*x^15 - 16*x^14 + (2*y - 88)*x^13 + (-6*y + 67)*x^12 + (-6*y + 796)
-*x^11 + (58*y + 441)*x^10 + (-30*y - 1764)*x^9 + (-279*y - 3875)*x^8 + (300*
-y - 3832)*x^7 + (1576*y - 2336)*x^6 + (1676*y + 18012)*x^5 + (1422*y + 63081
-)*x^4 + (-782*y + 71706)*x^3 + (-2351*y + 46153)*x^2 + (-2488*y + 45164)*x +
- (-1218*y + 22379)]
+[x^16 + 6*x^15 + 4*x^14 + (-2*y - 80)*x^13 + (-3*y - 283)*x^12 + (32*y + 20)
+*x^11 + (139*y + 2253)*x^10 + (-4*y + 5726)*x^9 + (-1135*y - 56)*x^8 + (-221
+6*y - 26948)*x^7 + (1428*y - 49546)*x^6 + (10858*y + 9812)*x^5 + (9253*y + 1
+41059)*x^4 + (-11416*y + 123950)*x^3 + (-19912*y - 55002)*x^2 + (-5622*y - 1
+06366)*x + (980*y - 15085)]
 18
-[x^3 - 3*x - 1946, x^3 + 51*x + 4214, x^4 - 4*y*x^3 - 5853*x^2 + 3912*y*x + 
-955616]
+[x^3 + 6*x - 4*y, x^3 + (-2697*y + 43455)*x + (-10110193*y - 5957745724), x^
+4 - 4*y*x^3 - 5853*x^2 + 3912*y*x + 955616]
 19
 [x^2 + 3, x^4 + 5*x^2 + 5]
 20
@@ -75,6 +75,9 @@ sanitize
 25
 x
 [x^2 - 2]
+hard DLs (#2228)
+[1, 2, 1624384359015881850161120870813]
+[1, 4, 3506795120905895253346115478005586436761515635553951033]
 26
 x^128 - 16*x^127 - 684*x^126 + 13212*x^125 + 200668*x^124 - 5049860*x^123 - 
 30146336*x^122 + 1186356796*x^121 + 1435862576*x^120 - 191745384780*x^119 + 
@@ -247,4 +250,4 @@ bad inputs
   ***   at top-level: bnrclassfield(bnfinit(x))
   ***                 ^-------------------------
   *** bnrclassfield: incorrect priority in bnrclassfield: variable x = x
-Total time spent: 3468
+Total time spent: 3700
