@@ -266,6 +266,7 @@ moreoperations() = gusuite("more operations", ()->{
   p2 = idealprimedec(nf,3)[1];
   iinv = [0];
   finv = [[p1,p2],[-2/3,-1/3]];
+  setrand(3);
   al = alginit(nf,[3,finv,iinv],x);
 
   do("construct algebra", ()->al);
